# vesin

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  create-single-cpp.py  cuda_types_wrapper.hpp  dynamic_cuda.hpp  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: build-wheels.yml  cxx-tests.yml  docs.yml  python-tests.yml
benchmarks/: benchmark.py  carbon.xyz  requirements.txt
ci/: cscs.yaml
docs/: Doxyfile  requirements.txt
examples/: README.md
examples/templated_kernels/: CMakeLists.txt
fortran/: CMakeLists.txt  Doxyfile  docs.md  f_vesin_wrapper.f90  vesin.f90
fortran/examples/: CMakeLists.txt  vesin_wrapper.f90  wrapper_test.f90
fortran/include/: vesin.mod
fortran/src/: cdef.f90  vesin.f90  vesin_wrapper.f90
fortran/test/: README.md  compile.sh  main.f90
fortran/tests/: CMakeLists.txt  tests.f90
fortran/wrapper/: test.f90  vesin_wrapper.f90
include/: vesin.h
latest/: .buildinfo  benchmarks.html  c-api.html  fortran-api.html  genindex.html  index.html  metatomic.html  objects.inv  python-api.html  search.html  searchindex.js  torch-api.html
python/vesin/: MANIFEST.in  pyproject.toml  setup.py
python/vesin-torch/: VERSION  pyproject.toml  setup.py
python/vesin-torch/build-backend/: backend.py
python/vesin-torch/tests/: test_autograd.py  test_metatensor.py  test_neighbors.py
python/vesin-torch/vesin/torch/: __init__.py  _c_lib.py  _neighbors.py  documentation.py
python/vesin-torch/vesin/torch/metatensor/: __init__.py  _model.py  _neighbors.py
python/vesin/benchmarks/: benchmark.py  benchmark_comparison.py  profile.py
python/vesin/src/vesin/: __init__.py  _ase.py  _c_lib.py  _neighbors.py
python/vesin/tests/: _utils.py  test_ase_plugin.py  test_cuda.py  test_cuda_verlet.py  test_cupy.py  test_gpu_consistency.py  test_metatomic.py  test_neighbors.py  test_numpy.py  test_torch.py  test_verlet.py
python/vesin/tests/data/: Cd2I4O12.xyz  carbon.xyz  diamond.xyz  naphthalene.xyz  readme.txt  rotated_box.xyz  slab.xyz
python/vesin/vesin/: __init__.py  _ase.py  _ase_device.py  _ase_plugin.py  _c_api.py  _c_lib.py  _neighbors.py  torch.py
python/vesin/vesin/metatomic/: __init__.py  _model.py  _neighbors.py
python/vesin_torch/: MANIFEST.in  pyproject.toml  setup.py
python/vesin_torch/build-backend/: backend.py
python/vesin_torch/tests/: simple_test.py  test_autograd.py  test_cuda.py  test_metatomic.py  test_neighbors.py
python/vesin_torch/vesin/torch/: __init__.py  _c_lib.py  _neighbors.py
python/vesin_torch/vesin/torch/metatensor/: _neighbors.py
python/vesin_torch/vesin_torch/: _neighbors.py
scripts/: clean-python.sh  format-cxx.sh  install-cupy.sh
src/: cpu_cell_list.cpp  cpu_cell_list.hpp  math.hpp  types.hpp  vesin.cpp
tests/: CMakeLists.txt  neighors.cpp
torch/: CMakeLists.txt  vesin
torch/include/: vesin_torch.hpp
torch/src/: vesin_torch.cpp
v0.1.0/: .buildinfo  benchmarks.html  c-api.html  genindex.html  index.html  python-api.html  search.html  searchindex.js
v0.2.0/: .buildinfo  benchmarks.html  c-api.html  genindex.html  index.html  objects.inv  python-api.html  search.html  searchindex.js
v0.3.0/: c-api.html  index.html  objects.inv  python-api.html  search.html  searchindex.js  torch-api.html
v0.3.1/: genindex.html  metatensor.html  torch-api.html
v0.3.2/: benchmarks.html  c-api.html  index.html  metatensor.html  python-api.html  search.html  searchindex.js
v0.3.3/: metatensor.html  python-api.html  torch-api.html
v0.3.4/: benchmarks.html  c-api.html  genindex.html  search.html  searchindex.js  torch-api.html
v0.3.5/: benchmarks.html  genindex.html  index.html  metatomic.html
v0.3.6/: c-api.html  python-api.html  searchindex.js  torch-api.html
v0.3.7/: metatomic.html  objects.inv  search.html
v0.3.8/: .buildinfo  benchmarks.html  c-api.html  genindex.html  index.html  metatomic.html  python-api.html  search.html  torch-api.html
v0.4.0/: benchmarks.html  metatomic.html  searchindex.js
v0.4.1/: .buildinfo  c-api.html  index.html  python-api.html
v0.4.2/: fortran-api.html  genindex.html  objects.inv  search.html  torch-api.html
v0.5.0/: genindex.html  index.html  metatomic.html  objects.inv  python-api.html  searchindex.js
v0.5.1/: metatomic.html  objects.inv  torch-api.html
v0.5.2/: benchmarks.html  search.html  searchindex.js
v0.5.3/: fortran-api.html  genindex.html  index.html
v0.5.4/: metatomic.html
v0.5.5/: citation.html  genindex.html  objects.inv  searchindex.js  torch-api.html
v0.5.6/: index.html  metatomic.html  searchindex.js  torch-api.html
v0.5.7/: searchindex.js
v0.5.8/: index.html  python-api.html  searchindex.js  torch-api.html
vesin/: CMakeLists.txt
vesin/cmake/: make_hex_array.cmake
vesin/cuda/include/: cuda_dynamic_linker.hpp  cuda_kernel_cache.hpp  cuda_nbrlist_extras.hpp  cuda_ptr_manager.hpp  cuda_ptr_registry.hpp  mic_neighbourlist.cuh  simple_neighbourlist.cuh  vesin_cuda.hpp
vesin/cuda/src/: cuda_ptr_manager.cpp  mic_neighbourlist.cu  simple_neighbourlist.cu  vesin_cuda.cpp  vesin_cuda_stub.cpp
vesin/examples/: verlet_example.cpp
vesin/include/: cuda_kernel_cache.hpp  vesin.h  vesin_cuda.hpp
vesin/scripts/: create-single-cpp.py
vesin/src/: cell_list.cu  cluster.hpp  cluster_pair_search.cpp  cpu_cell_list.cpp  cpu_cell_list.hpp  cuda_bruteforce.cu  cuda_buffers.cpp  cuda_cell_list.cu  cuda_sort_pairs.cu  cuda_stub.cpp  cuda_verlet.cu  math.hpp  mic_neighbourlist.cu  mic_neighbourlist.cuh  shared_libraries.cpp  threadpool.hpp  types.hpp  verlet.cpp  verlet.hpp  verlet_cuda.cpp  verlet_cuda.hpp  vesin.cpp  vesin_cuda.cpp  vesin_cuda.hpp  vesin_cuda_stub.cpp
vesin/src/cuda/: bruteforce.cu  bruteforce.cuh  cell_list.cu  cell_list.cuh  sort_pairs.cu  sort_pairs.cuh  verlet.cu  verlet.cuh
vesin/tests/: CMakeLists.txt  cluster_pair.cpp  cuda-valgrind.supp  cuda.cpp  memory.cpp  neighbors.cpp  verlet.cpp
vesin/tests/single-cpp/: CMakeLists.txt  main.cpp
vesin/torch/: CMakeLists.txt
vesin/torch/include/: vesin_torch.hpp
vesin/torch/src/: torch.cpp  vesin_torch.cpp
(+126 files in other folders)
