[project]
name = "vesin"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Guillaume Fraux", email = "guillaume.fraux@epfl.ch"},
]

dependencies = [
    "numpy"
]

readme = "README.md"
license = {text = "BSD-3-Clause"}
description = "A library to computes neighbor lists for atomistic system"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/Luthaf/vesin/"
documentation = "https://luthaf.fr/vesin/"
repository = "https://github.com/Luthaf/vesin/"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=68",
    "packaging >=23",
    "wheel >=0.41",
    "cmake",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python/vesin/src"]
include = ["vesin"]
namespaces = false
